2001-12-01  Seth Nickell  <snickell@stanford.edu>

	* menu.c: (load_icons_handler), (show_item_menu),
	(setup_full_menuitem_with_size), (start_favourites_menu),
	(create_menuitem), (create_menu_at_fr), (applet_menu_append),
	(create_add_panel_submenu), (setup_menuitem_try_pixmap),
	(make_add_submenu), (make_panel_submenu), (create_panel_submenu),
	(create_desktop_menu), (add_distribution_submenu),
	(add_kde_submenu), (create_root_menu), (load_menu_applet),
	(load_menu_image_deferred):

	Make panel menus use GtkImage rather than GtkPixmap. Furthermore
	convert to using GtkImageMenuItem at the coercion of jrb. This
	does some weird things (note that the height of menu items changes
	pre and post image allocation) which I'll have to repair.

	Got rid of the fake icon stuff since (hypothetically) this should
	be handled by GtkImageMenuItem.
	
Fri Nov 30 17:34:01 2001  George Lebl <jirka@5z.com>

	* *.[ch]: kill PanelOrientation and use GtkOrientation, Kill dialog
	  levels, kill BasePLevels, and kill a bit of cruft

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-frame.[ch]:
	(panel_applet_frame_save_position): remove base_key arg.
	(panel_applet_frame_save_session): ditto.

	* panel.c: (panel_remove_applets): upd.

	* applet.c: (applet_idle_remove): upd.
	* session.c:
	(save_applet_configuration),
	(panel_session_die): upd.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-gconf.c: (panel_gconf_get_session_key): fix silly.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-gconf.c: (panel_gconf_get_session_key): warn if we
	can't get the client id.

	* session.c: (save_applet_configuration): check the return
	from panel_gconf_get_session_key.

2001-11-30  Mark McLoughlin  <mark@skynet.ie>

	* panel-applet-frame.[ch]:
	(panel_applet_frame_save_position): add base_key arg.
	(panel_applet_frame_save_session): impl.
	(panel_applet_frame_finalize): free keys.
	(panel_applet_frame_construct): generate keys.
